share/userfiles/templates/default.css
/* ... */
/*
 * popupWindow css
 */

div#popupWindow {
    position: absolute;
    z-index: 2000;

    font-weight: normal;
    -moz-border-radius: 11px;
    -khtml-border-radius: 11px;
    -webkit-border-radius: 11px;
    border-radius: 5px;
    background: #fff;
    border: 1px solid #e5e5e5;
    -moz-box-shadow: rgba(200,200,200,1) 0 4px 18px;
    -webkit-box-shadow: rgba(200,200,200,1) 0 4px 18px;
    -khtml-box-shadow: rgba(200,200,200,1) 0 4px 18px;
    box-shadow: rgba(200,200,200,1) 0 4px 18px;
}

div#popupWindow div.close {
    width: 20px;
    height: 20px;
    float: right;
    font-size: 13px;
    border: 1px dotted #c0c0c0;
    text-align: center;
    margin-top: 8px;
    margin-right: 8px;
    cursor: pointer;
    color: #555;
}

/* Content styling */
#popupWindowContent {
    padding: 0 16px 16px 16px;
    color: #43B3CF;
}

#popupWindowContent div.error {
    background-color: #febabb;
    border: 1px solid #d5091b;
    color: #d5091b;
    border-radius: 5px;
    margin: 2px 0;
    padding: 3px;
    white-space: normal;
}

#popupWindowContent div.error code,
#popupWindowContent div.error pre {
    display: block;
    overflow: scroll;
    background-color: #fff;
    color: #000;
    margin: 2px;
    padding: 2px;
}

#popupWindowContent div.error div.details {
    margin-top: 5px;
    text-align: left;
    font-size: 0.8em;
}

#popupWindowContent table.mytable {
    width: 100%;
    padding: 0;
    margin: 0;
}

#popupWindowContent table.mytable th,
#popupWindowContent table.mytable td {
    padding: 0;
    margin: 0;
    border: 0;
    color: #43B3CF;
}

#popupWindowContent table.mytable td {
    vertical-align: middle;
}

#popupWindowContent label span {
    vertical-align: middle;
}

#popupWindowContent p {
    margin-bottom: 12px;
}

/* title */
div.infopage h2,
div#popupWindow h1,
#popupWindowContent h2 {
    text-align: left;
    padding: 3px 10px 2px 2px;
    line-height:20px;
    font-weight:normal;
    border-bottom: 1px solid #7EA434;
    color: #43B3CF;
}

div#popupWindow h1 {
    font-weight: normal;
    margin: 5px;
    padding: 5px 10px;
    font-size: 1.5em;

    cursor: move;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

#popupWindowContent h2 {
    margin: 5px 0;
}

/* cat */
#popupWindowContent table.mytable th.cat {font-size: 1.2em;}

/* Child rows */
#popupWindowContent table.mytable tr.child-row td.tdlabel {padding-left: 10px;}

/* td labels */
#popupWindowContent table.mytable td.tdlabel {width: 140px;}
#popupWindowContent table.mytable td.tdbox {width: 25px;}
#popupWindowContent table.mytable td.tdfield {
    overflow: hidden;
    text-overflow: ellipsis;
}
#popupWindowContent input[type="radio"] {
    vertical-align: middle;
}
#popupWindowContent table.mytable tr td.tdlabel input {
    width: 140x;
}
#popupWindowContent table.mytable tr td.tdfield textarea,
#popupWindowContent table.mytable tr td.tdfield select {
    width: 99%;
}
#popupWindowContent table.mytable tr td.tdfield textarea {
    height: 250px;
}
#popupWindowContent table.mytable tr td.tdfield input[type="checkbox"] {
    width: auto;
    margin-right:2px;
}
#popupWindowContent table.mytable tr td.tdfield span {
    word-wrap: break-word;
}
#popupWindowContent table.mytable tr td.tdfield div.picker input {
    width:140px;
    margin-right:3px;
}
#popupWindowContent table.mytable tr td.tdfield div.picker img {
    vertical-align: middle;
}
#popupWindowContent table.mytable tr td.tdfield input.err,
#popupWindowContent table.mytable tr td.tdfield select.err {
    border-color: #ff4f4f;
}

#popupWindowContent table.mytable tr td.tdfield div.err {
    margin: 0;
}

#popupWindowContent .submit {
    /*font-weight: bold;
    color: #43b3cf;
    vertical-align: middle;*/

    padding: 3px 10px;
    background-color: #fbfbfb;
    border: 1px solid #e5e5e5;
    border-width: 1px;
    border-style: solid;
    -moz-border-radius: 5px;
    -khtml-border-radius: 5px;
    -webkit-border-radius: 5px;
    border-radius: 5px;
    cursor: pointer;
    text-decoration: none;

    margin: 2px auto;
    display: block;
}

#popupWindowContent table.mytable tr td.err div {
    padding: 3px;
    margin: 0 0 0 20%;
    width: 80%;
    border: 1px solid #ff4f4f;
    background-color: #ffdddd;
    color: #000000;
    -moz-border-radius: 5px;
    -khtml-border-radius: 5px;
    -webkit-border-radius: 5px;
    border-radius: 5px;
}

#popupWindowContent div.success,
#popupWindowContent div.err {
    padding: 5px 8px;
    margin: 10px;
    border: 1px solid #00ff00;
    background-color: #ddffdd;
    color: #000000;
    -moz-border-radius: 5px;
    -khtml-border-radius: 5px;
    -webkit-border-radius: 5px;
    border-radius: 5px;
}

#popupWindowContent div.err {
    border: 1px solid #ff4f4f;
    background-color: #FFC9C9;
    color: #000;
}

/* Popup window forms */

#popupWindowContent table.perms td.perm {
    text-align: center;
}

#popupWindowContent a {color:#43B3CF;text-decoration:none;}
#popupWindowContent a:hover {color:#779D2A;text-decoration:underline}

#popupWindowContent input, select {
    color: #555555;
    background-color: #fbfbfb;
    border: 1px solid #e5e5e5;
}

/* Header styling */
.header {
    background-color: #fbfbfb;
    border-bottom: 1px solid #ddd;
    box-shadow: 0 3px 6px #ddd;
    color: #43B3CF;
    height: 31px;
    width: 100%;
}

#headershow {
    display: none;
    width: 9px;
    min-width: 9px;
    height: 31px;
    background-image: none;
    background-color: #fbfbfb;
    border: 1px solid #dddddd;
    border-top: none;
    border-bottom-right-radius: 4px;
}

.header ul.head {
    margin: 0;
    padding: 0;
    height: 31px;
    float:left;
    list-style:none;
}

.header ul.right {float:right}

.header ul.head li {
    margin: 0;
    padding: 0;

    height: 100%;

    float: left;
}
/* ... */

